Fix scrollbar style for chromium based browsers and refactor color definitons

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -77,3 +77,85 @@ $electric-yellow-600: #546b11;
 $electric-yellow-700: #3f500e;
 $electric-yellow-800: #2b370a;
 $electric-yellow-900: #1a1f00;
+
+:root {
+  --electric-green-100: #{$electric-green-100};
+  --electric-green-200: #{$electric-green-200};
+  --electric-green-300: #{$electric-green-300};
+  --electric-green-400: #{$electric-green-400};
+  --electric-green-500: #{$electric-green-500};
+  --electric-green-600: #{$electric-green-600};
+  --electric-green-700: #{$electric-green-700};
+  --electric-green-800: #{$electric-green-800};
+  --electric-green-900: #{$electric-green-900};
+
+  --electric-lightblue-100: #{$electric-lightblue-100};
+  --electric-lightblue-200: #{$electric-lightblue-200};
+  --electric-lightblue-300: #{$electric-lightblue-300};
+  --electric-lightblue-400: #{$electric-lightblue-400};
+  --electric-lightblue-500: #{$electric-lightblue-500};
+  --electric-lightblue-600: #{$electric-lightblue-600};
+  --electric-lightblue-700: #{$electric-lightblue-700};
+  --electric-lightblue-800: #{$electric-lightblue-800};
+  --electric-lightblue-900: #{$electric-lightblue-900};
+
+  --electric-blue-100: #{$electric-blue-100};
+  --electric-blue-200: #{$electric-blue-200};
+  --electric-blue-300: #{$electric-blue-300};
+  --electric-blue-400: #{$electric-blue-400};
+  --electric-blue-500: #{$electric-blue-500};
+  --electric-blue-600: #{$electric-blue-600};
+  --electric-blue-700: #{$electric-blue-700};
+  --electric-blue-800: #{$electric-blue-800};
+  --electric-blue-900: #{$electric-blue-900};
+
+  --electric-violet-100: #{$electric-violet-100};
+  --electric-violet-200: #{$electric-violet-200};
+  --electric-violet-300: #{$electric-violet-300};
+  --electric-violet-400: #{$electric-violet-400};
+  --electric-violet-500: #{$electric-violet-500};
+  --electric-violet-600: #{$electric-violet-600};
+  --electric-violet-700: #{$electric-violet-700};
+  --electric-violet-800: #{$electric-violet-800};
+  --electric-violet-900: #{$electric-violet-900};
+
+  --electric-pink-100: #{$electric-pink-100};
+  --electric-pink-200: #{$electric-pink-200};
+  --electric-pink-300: #{$electric-pink-300};
+  --electric-pink-400: #{$electric-pink-400};
+  --electric-pink-500: #{$electric-pink-500};
+  --electric-pink-600: #{$electric-pink-600};
+  --electric-pink-700: #{$electric-pink-700};
+  --electric-pink-800: #{$electric-pink-800};
+  --electric-pink-900: #{$electric-pink-900};
+
+  --electric-red-100: #{$electric-red-100};
+  --electric-red-200: #{$electric-red-200};
+  --electric-red-300: #{$electric-red-300};
+  --electric-red-400: #{$electric-red-400};
+  --electric-red-500: #{$electric-red-500};
+  --electric-red-600: #{$electric-red-600};
+  --electric-red-700: #{$electric-red-700};
+  --electric-red-800: #{$electric-red-800};
+  --electric-red-900: #{$electric-red-900};
+
+  --electric-orange-100: #{$electric-orange-100};
+  --electric-orange-200: #{$electric-orange-200};
+  --electric-orange-300: #{$electric-orange-300};
+  --electric-orange-400: #{$electric-orange-400};
+  --electric-orange-500: #{$electric-orange-500};
+  --electric-orange-600: #{$electric-orange-600};
+  --electric-orange-700: #{$electric-orange-700};
+  --electric-orange-800: #{$electric-orange-800};
+  --electric-orange-900: #{$electric-orange-900};
+
+  --electric-yellow-100: #{$electric-yellow-100};
+  --electric-yellow-200: #{$electric-yellow-200};
+  --electric-yellow-300: #{$electric-yellow-300};
+  --electric-yellow-400: #{$electric-yellow-400};
+  --electric-yellow-500: #{$electric-yellow-500};
+  --electric-yellow-600: #{$electric-yellow-600};
+  --electric-yellow-700: #{$electric-yellow-700};
+  --electric-yellow-800: #{$electric-yellow-800};
+  --electric-yellow-900: #{$electric-yellow-900};
+}
